Adding sentry and making design improvements

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aptabase/web": "^0.4.3",
+    "@sentry/nextjs": "^10.32.1",
     "@types/papaparse": "^5.5.2",
     "next": "^16.0.8",
     "papaparse": "^5.5.3",
